@@ -1,10 +1,6 @@
 Latency.Ping=ping:default -p 10000
 Latency.Endpoints=default -p 10000
 
-# For optimal performance, we use a thread pool of size 1.
-Ice.ThreadPool.Server.SizeMax=1
-Ice.ThreadPool.Server.Size=1
-
 #Ice.Plugin.IceSSL=IceSSL:create
 IceSSL.Client.CertPath=../../../certs
 IceSSL.Client.Config=./sslconfig.xml
