@@ -275,6 +275,8 @@ IceInternal::Instance::clientThreadPool()
 
     if(!_clientThreadPool) // Lazy initialization.
     {
+// Not necessary anymore, this is now the default for every thread pool
+/*
 	//
 	// Make sure that the client thread pool defaults are correctly
 	//
@@ -290,6 +292,7 @@ IceInternal::Instance::clientThreadPool()
 	{
 	    _properties->setProperty("Ice.ThreadPool.Client.SizeWarn", "0");
 	}
+*/
 
 	_clientThreadPool = new ThreadPool(this, "Ice.ThreadPool.Client", 0);
     }
