@@ -1,10 +1,6 @@
 Throughput.Throughput=throughput:default -p 10000
 Throughput.Endpoints=default -p 10000
 
-# For optimal performance, we use a thread pool of size 1.
-Ice.ThreadPool.Server.SizeMax=1
-Ice.ThreadPool.Server.Size=1
-
 Glacier.Router.Endpoints=default -p 10005
 Glacier.Router.Client.Endpoints=default
 
