@@ -189,6 +189,8 @@ public class Instance
 	
 	if(_clientThreadPool == null) // Lazy initialization.
 	{
+// Not necessary anymore, this is now the default for every thread pool
+/*
 	    //
 	    // Make sure that the client thread pool defaults are
 	    // correctly.
@@ -205,6 +207,7 @@ public class Instance
 	    {
 		_properties.setProperty("Ice.ThreadPool.Client.SizeWarn", "0");
 	    }
+*/
 
 	    _clientThreadPool = new ThreadPool(this, "Ice.ThreadPool.Client", 0);
         }
