@@ -1,6 +1,12 @@
 Changes since version 1.2.0
 ---------------------------
 
+- The default thread pool size is now just one thread. This is the
+  fastest possible setting, still allows one level of nesting, and
+  doesn't require to make the servants thread safe. (Please see the
+  description of the thread pool properties in the manual for
+  information on how to increase the number of threads.)
+
 - Fixed a problem with servers not shutting down properly under
   certain circumstances.
 
